cmake_minimum_required(VERSION 2.8)

project ( Network CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(Network ${SRC})
target_link_libraries(Network Qt5::Core)
target_link_libraries(Network Qt5::Gui)
target_link_libraries(Network Utility)
target_link_libraries(Network Networking)
target_link_libraries(Network TcpNetworking)
target_link_libraries(Network AssetInterfaces)
target_link_libraries(Network AssetGenerics)
target_link_libraries(Network Assets)
target_link_libraries(Network Wavefront)
target_link_libraries(Network QImageLoader)
