cmake_minimum_required(VERSION 2.8)

project ( SimpleTest CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(SimpleTest ${SRC})
target_link_libraries(SimpleTest Qt5::Core)
target_link_libraries(SimpleTest Qt5::Gui)
target_link_libraries(SimpleTest Utility)
target_link_libraries(SimpleTest Networking)
target_link_libraries(SimpleTest TcpNetworking)
target_link_libraries(SimpleTest AssetInterfaces)
target_link_libraries(SimpleTest AssetGenerics)
target_link_libraries(SimpleTest Assets)
target_link_libraries(SimpleTest Wavefront)
target_link_libraries(SimpleTest QImageLoader)
