cmake_minimum_required(VERSION 2.8)

project ( SimpleTestBis CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(SimpleTestBis ${SRC})
target_link_libraries(SimpleTestBis Qt5::Core)
target_link_libraries(SimpleTestBis Qt5::Gui)
target_link_libraries(SimpleTestBis Utility)
target_link_libraries(SimpleTestBis Networking)
target_link_libraries(SimpleTestBis TcpNetworking)
target_link_libraries(SimpleTestBis AssetInterfaces)
target_link_libraries(SimpleTestBis AssetGenerics)
target_link_libraries(SimpleTestBis Assets)
target_link_libraries(SimpleTestBis Wavefront)
target_link_libraries(SimpleTestBis QImageLoader)
target_link_libraries(SimpleTestBis Model)
